--- a/index.html
+++ b/index.html
@@ -21,19 +21,20 @@
             <p>Делаю мод на заказ , делаю мод на заказ</p>
             <a href="#">Заказать</a>
         </section>
-        <section class="item">
-            <p>скачать бесплатно</p>
-            <ul>
-                <li><a href="#" class="link-item"><img src="img/photo__1" alt=""></a></li>
-                <li><a href="#" class="link-item"><img src="img/photo__1" alt=""></a></li>
-                <li><a href="#" class="link-item"><img src="img/photo__1" alt=""></a></li>
-                <li><a href="#" class="link-item"><img src="img/photo__1" alt=""></a></li>
-                <li><a href="#" class="link-item"><img src="img/photo__1" alt=""></a></li>
-                <li><a href="#" class="link-item"><img src="img/photo__1" alt=""></a></li>
-                <li><a href="#" class="link-item"><img src="img/photo__1" alt=""></a></li>
-                <li><a href="#" class="link-item"><img src="img/photo__1" alt=""></a></li>
-                <li><a href="#" class="link-item"><img src="img/photo__1" alt=""></a></li>
-            </ul>
+        <section class="free">
+                <p>скачать бесплатно</p>
+                <div class="items">
+                    <div><a href="#" class="item"><img src="img/photo__1.jpg" alt=""></a></div>
+                    <div><a href="#" class="item"><img src="img/photo__1.jpg" alt=""></a></div>
+                    <div><a href="#" class="item"><img src="img/photo__1.jpg" alt=""></a></div>
+                    <div><a href="#" class="item"><img src="img/photo__1.jpg" alt=""></a></div>
+                    <div><a href="#" class="item"><img src="img/photo__1.jpg" alt=""></a></div>
+                    <div><a href="#" class="item"><img src="img/photo__1.jpg" alt=""></a></div>
+                    <div><a href="#" class="item"><img src="img/photo__1.jpg" alt=""></a></div>
+                    <div><a href="#" class="item"><img src="img/photo__1.jpg" alt=""></a></div>
+                    <div><a href="#" class="item"><img src="img/photo__1.jpg" alt=""></a></div>
+                </div>
+                
         </section>
     </div>
     
